# lerobot-remote

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
robot/: pyproject.toml
robot/src/lerobot_robot_remote/: __init__.py
src/lerobot_remote_transport/: __init__.py  signaling.py  webrtc.py
src/lerobot_robot_remote/: __init__.py  remote_robot.py
src/lerobot_teleoperator_remote/: __init__.py  remote_teleop.py
teleop/: pyproject.toml
tests/: conftest.py  test_end_to_end.py  test_negotiation.py  test_signaling.py  test_simulation.py
transport/: pyproject.toml
transport/src/lerobot_remote_transport/: modes.py
