[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_remote"
version = "0.1.0"
description = "LeRobot Robot and Teleoperator plugins for remote control over WebRTC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "lerobot-action-space @ git+https://github.com/koenvanwijk/lerobot-action-space",
    "aiortc>=1.9",
    "aiohttp>=3.9",
]

[project.urls]
Repository = "https://github.com/koenvanwijk/lerobot-remote"
Issues = "https://github.com/koenvanwijk/lerobot-remote/issues"

[tool.setuptools.packages.find]
where = ["src"]
