[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Dev meta-package: installs all three lerobot-remote sub-packages.
# Use: pip install -e ./transport -e ./robot -e ./teleop
#
# Sub-packages (each installable separately):
#   transport/  →  lerobot_remote_transport  (shared WebRTC + signaling)
#   robot/      →  lerobot_robot_remote       (LeRobot Robot plugin)
#   teleop/     →  lerobot_teleoperator_remote (LeRobot Teleoperator plugin)

[project]
name = "lerobot-remote-dev"
version = "0.1.0"
description = "Dev meta-package for lerobot-remote (installs all sub-packages)"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "lerobot_remote_transport",
    "lerobot_robot_remote",
    "lerobot_teleoperator_remote",
]

[project.urls]
Repository = "https://github.com/koenvanwijk/lerobot-remote"
