[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_remote"
version = "0.1.0"
description = "LeRobot Teleoperator plugin for remote control over WebRTC (robot side)"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "lerobot_remote_transport>=0.1.0",
    "lerobot-action-space @ git+https://github.com/koenvanwijk/lerobot-action-space",
]

[project.urls]
Repository = "https://github.com/koenvanwijk/lerobot-remote"
Issues = "https://github.com/koenvanwijk/lerobot-remote/issues"

[tool.setuptools.packages.find]
where = ["src"]
