[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_remote_transport"
version = "0.1.0"
description = "Shared WebRTC + signaling transport for lerobot-remote plugins"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.9",
    "aiohttp>=3.9",
]

[project.urls]
Repository = "https://github.com/koenvanwijk/lerobot-remote"

[tool.setuptools.packages.find]
where = ["src"]
